--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -1,91 +1,135 @@
-version: "3.1"
-
+version: "3.0"
 nlu:
-- intent: greet
-  examples: |
-    - hey
-    - hello
-    - hi
-    - hello there
-    - good morning
-    - good evening
-    - moin
-    - hey there
-    - let's go
-    - hey dude
-    - goodmorning
-    - goodevening
-    - good afternoon
+  - intent: greet
+    examples: |
+      - 你好
+      - 您好
+      - hello
+      - hi
+      - 喂
+  - intent: goodbye
+    examples: |
+      - 拜拜
+      - 再見
+      - 拜
+      - 退出
+      - 结束
 
-- intent: goodbye
-  examples: |
-    - cu
-    - good by
-    - cee you later
-    - good night
-    - bye
-    - goodbye
-    - have a nice day
-    - see you around
-    - bye bye
-    - see you later
+  - intent: query_keyword
+    examples: |
+      - [Taylor Swift](keyword)
+      - [Post Malone](keyword) 演唱會
+      - [Justin Bibber](keyword) 演出
+      - [台北](city)演唱會資訊
+      - [IVE](keyword)最近在[台北](datetime)會開演唱會嗎？
+      - 請告知我[五月天](keyword)在[台南](datetime)的演唱會訊息。
+      - 請問[陳奕迅](keyword)是否有計畫在[台東](datetime)舉辦演唱會？
+      - 請問[林俊傑](keyword)下個月會在[花蓮](datetime)有表演嗎？
+      - 請告訴我[周杰倫](keyword)最新的音樂活動消息。
+      - 請問[王力宏](keyword)最近有沒有在[台南](datetime)舉辦演唱會？
+      - 我想了解[蕭敬騰](keyword)的巡迴演唱會日程。
+      - 請問[A-Lin](keyword)是否有計畫在[台中](datetime)舉辦音樂會？
+      - 請告訴我[蔡依林](keyword)最新專輯發售日期。
+      - 請問[周興哲](keyword)未來一年的巡迴演唱會安排。
+      - 請問[G.E.M.](keyword)最近有沒有在[台南](datetime)舉辦演唱會？
+      - 請問[Mayday](keyword)是否有計畫在[台東](datetime)有表演？
+      - 請告訴我[莫文蔚](keyword)最新單曲的發佈日期。
+      - 請問[張學友](keyword)下個月會在[花蓮](datetime)有表演嗎？
+      - 請問[鄧紫棋](keyword)最近有沒有在[台北](datetime)舉辦演唱會？
+      - 我想知道[蘇打綠](keyword)的音樂會時間地點。
+      - 請問[劉德華](keyword)是否有計畫在[台南](datetime)進行演出？
+      - 請告訴我[田馥甄](keyword)的新專輯概要。
+      - 請問[盧廣仲](keyword)未來六個月的演唱會安排。
+      - 請問[王心凌](keyword)最近有沒有在[台中](datetime)舉辦演唱會？
+      - 請問[韋禮安](keyword)下個月會在[台東](datetime)有表演嗎？
+      - 請告訴我[李宇春](keyword)的巡迴演唱會日程。
+      - 請問[張惠妹](keyword)是否有計畫在[花蓮](datetime)舉辦音樂會？
+      - 請問[那英](keyword)最近有沒有在[台北](datetime)舉辦演唱會？
+      - 請問[蔡依林](keyword)未來一個月的演唱會時間地點。
+      - 請告訴我[陳奕迅](keyword)新歌MV的上線日期。
+      - 請問[五月天](keyword)下個月會在[台南](datetime)有表演嗎？
+      - 請問[林俊傑](keyword)最近有沒有在[台東](datetime)舉辦演唱會？
+      - 我想知道[蕭敬騰](keyword)的新歌發佈日期。
+      - 請問[A-Lin](keyword)是否有計畫在[台中](datetime)舉辦演唱會？
+      - 請告訴我[王力宏](keyword)的最新單曲發行情況。
+      - 請問[周杰倫](keyword)下個月會在[台北](datetime)舉辦音樂會嗎？
+      - 請問[蔡依林](keyword)最近有沒有在[台南](datetime)進行演出？
+      - 請問[蕭敬騰](keyword)未來一年的巡迴演唱會安排。
+      - 請告訴我[五月天](keyword)新專輯的發售日期。
+      - 請問[陳奕迅](keyword)下一場演唱會的票價和座位情況。
+      - 請問[林俊傑](keyword)最近有沒有在[台東](datetime)舉辦音樂會？
+      - 請問[蕭敬騰](keyword)未來一個月的演唱會時間地點。
+      - 請告訴我[A-Lin](keyword)最新MV的拍攝花絮。
+      - 請問[王力宏](keyword)下個月會在[台中](datetime)有表演嗎？
+      - 請問[周杰倫](keyword)未來一年的巡迴演唱會安排。
+      - 請問[蔡依林](keyword)是否有計畫在[台南](datetime)舉辦音樂會？
+      - 請問[五月天](keyword)最新專輯的主打歌曲是什麼？
+      - 請問[陳奕迅](keyword)下場音樂會的開演時間和票價。
+      - 請告訴我[林俊傑](keyword)的最新演唱會海報。
+      - 請問[A-Lin](keyword)是否有計畫在[台中](datetime)舉辦演唱會？
+      - 請問[王力宏](keyword)最近有沒有在[台北](datetime)進行演出？
+      - 請問[周杰倫](keyword)未來兩個月會在[台南](datetime)有表演嗎？
+      - 請問[蔡依林](keyword)的下場音樂會是否有特別嘉賓演出？
+      - 請告訴我[五月天](keyword)新專輯的發售日期。
+      - 請問[鄧紫棋](keyword)下一場音樂會的票價和座位情況。
+      - 請問[張學友](keyword)最近有沒有在[台北](datetime)舉辦演唱會？
+      - 請問[莫文蔚](keyword)未來一個月會在[花蓮](datetime)有表演嗎？
+      - 請問[那英](keyword)最新單曲的發佈日期？
+      - 請問[劉德華](keyword)是否有計畫在[台南](datetime)舉辦音樂會？
+      - 請告訴我[田馥甄](keyword)最新專輯的概要。
+      - 請問[盧廣仲](keyword)未來六個月的演唱會安排。
+      - 請問[王心凌](keyword)最近有沒有在[台中](datetime)舉辦演唱會？
+      - 請問[韋禮安](keyword)下個月會在[台東](datetime)有表演嗎？
+      - 請告訴我[李宇春](keyword)的巡迴演唱會日程。
+      - 請問[張惠妹](keyword)是否有計畫在[花蓮](datetime)舉辦音樂會？
+      - 請問[那英](keyword)最近有沒有在[台北](datetime)舉辦演唱會？
+      - 請問[蔡依林](keyword)未來一個月的演唱會時間地點。
+      - 請告訴我[陳奕迅](keyword)新歌MV的上線日期。
+      - 請問[五月天](keyword)下個月會在[台南](datetime)有表演嗎？
+      - 請問[林俊傑](keyword)最近有沒有在[台東](datetime)舉辦演唱會？
+      - 我想知道[蕭敬騰](keyword)的新歌發佈日期。
+      - 請問[A-Lin](keyword)是否有計畫在[台中](datetime)舉辦演唱會？
+      - 請告訴我[王力宏](keyword)的最新單曲發行情況。
+      - 請問[周杰倫](keyword)下個月會在[台北](datetime)舉辦音樂會嗎？
+      - 請問[蔡依林](keyword)最近有沒有在[台南](datetime)進行演出？
+      - 請問[蕭敬騰](keyword)未來一年的巡迴演唱會安排。
+      - 請告訴我[五月天](keyword)新專輯的發售日期。
+      - 請問[陳奕迅](keyword)下一場演唱會的票價和座位情況。
+      - 請問[林俊傑](keyword)最近有沒有在[台東](datetime)舉辦音樂會？
+      - 請問[蕭敬騰](keyword)未來一個月的演唱會時間地點。
+      - 請告訴我[A-Lin](keyword)最新MV的拍攝花絮。
+      - 請問[王力宏](keyword)下個月會在[台中](datetime)有表演嗎？
+      - 請問[周杰倫](keyword)未來一年的巡迴演唱會安排。
+      - 請問[蔡依林](keyword)是否有計畫在[台南](datetime)舉辦音樂會？
+      - 請問[五月天](keyword)最新專輯的主打歌曲是什麼？
+      - 請問[陳奕迅](keyword)下場音樂會的開演時間和票價。
+      - 請告訴我[林俊傑](keyword)的最新演唱會海報。
+      - 請問[A-Lin](keyword)是否有計畫在[台中](datetime)舉辦演唱會？
+      - 請問[王力宏](keyword)最近有沒有在[台北](datetime)進行演出？
+      - 請問[周杰倫](keyword)未來兩個月會在[台南](datetime)有表演嗎？
+      - 請問[蔡依林](keyword)的下場音樂會是否有特別嘉賓演出？
+      - 請告訴我[五月天](keyword)新專輯的發售日期。
+      - 請問[鄧紫棋](keyword)下一場音樂會的票價和座位情況。
+      - 請問[張學友](keyword)最近有沒有在[台北](datetime)舉辦演唱會？
+      - 請問[莫文蔚](keyword)未來一個月會在[花蓮](datetime)有表演嗎？
+      - 請問[那英](keyword)最新單曲的發佈日期？
+      - 請問[劉德華](keyword)是否有計畫在[台南](datetime)舉辦音樂會？
+      - 請告訴我[田馥甄](keyword)最新專輯的概要。
+      - 請問[盧廣仲](keyword)未來六個月的演唱會安排。
+      - 請問[王心凌](keyword)最近有沒有在[台中](datetime)舉辦演唱會？
+      - 請問[韋禮安](keyword)下個月會在[台東](datetime)有表演嗎？
+      - 請告訴我[李宇春](keyword)的巡迴演唱會日程。
+      - 請問[張惠妹](keyword)是否有計畫在[花蓮](datetime)舉辦音樂會？
+      - 請問[那英](keyword)最近有沒有在[台北](datetime)舉辦演唱會？
+      - [台北](city)演唱會
+      - [花蓮](city) [明天](datetime)
+      - [台東](city)演唱會 [明年](datetime)
 
-- intent: affirm
-  examples: |
-    - yes
-    - y
-    - indeed
-    - of course
-    - that sounds good
-    - correct
-
-- intent: deny
-  examples: |
-    - no
-    - n
-    - never
-    - I don't think so
-    - don't like that
-    - no way
-    - not really
-
-- intent: mood_great
-  examples: |
-    - perfect
-    - great
-    - amazing
-    - feeling like a king
-    - wonderful
-    - I am feeling very good
-    - I am great
-    - I am amazing
-    - I am going to save the world
-    - super stoked
-    - extremely good
-    - so so perfect
-    - so good
-    - so perfect
-
-- intent: mood_unhappy
-  examples: |
-    - my day was horrible
-    - I am sad
-    - I don't feel very well
-    - I am disappointed
-    - super sad
-    - I'm so sad
-    - sad
-    - very sad
-    - unhappy
-    - not good
-    - not very good
-    - extremly sad
-    - so saad
-    - so sad
-
-- intent: bot_challenge
-  examples: |
-    - are you a bot?
-    - are you a human?
-    - am I talking to a bot?
-    - am I talking to a human?
+  - intent: query_further_time
+    examples: |
+      - 那麼[台北](city)呢
+      - 改為搜尋[桃園](city)
+      - 那[基隆](city)呢
+      - 那[明天](datetime)呢
+      - 那[屏東](city) [下個月](datetime)呢
+      - 如果是[後天](city)呢
