--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,30 +1,22 @@
-version: "3.1"
-
+version: "3.0"
 stories:
-
-- story: happy path
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_great
-  - action: utter_happy
-
-- story: sad path 1
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: affirm
-  - action: utter_happy
-
-- story: sad path 2
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: deny
-  - action: utter_goodbye
+  - story: happy path
+    steps:
+      - intent: greet
+      - action: utter_greet
+  - story: query time
+    steps:
+      - intent: query_time
+      - action: action_query_time
+  - story: query date
+    steps:
+      - intent: query_date
+      - action: action_query_date
+  - story: query weekday
+    steps:
+      - intent: query_weekday
+      - action: action_query_weekday
+  - story: say goodbye
+    steps:
+      - intent: goodbye
+      - action: utter_goodbye
