--- a/domain.yml
+++ b/domain.yml
@@ -1,34 +1,30 @@
-version: "3.1"
-
-intents:
-  - greet
-  - goodbye
-  - affirm
-  - deny
-  - mood_great
-  - mood_unhappy
-  - bot_challenge
-
-responses:
-  utter_greet:
-  - text: "Hey! How are you?"
-
-  utter_cheer_up:
-  - text: "Here is something to cheer you up:"
-    image: "https://i.imgur.com/nGF1K8f.jpg"
-
-  utter_did_that_help:
-  - text: "Did that help you?"
-
-  utter_happy:
-  - text: "Great, carry on!"
-
-  utter_goodbye:
-  - text: "Bye"
-
-  utter_iamabot:
-  - text: "I am a bot, powered by Rasa."
-
+version: "3.0"
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
+intents:
+  - greet
+  - goodbye
+  - query_time
+  - query_date
+  - query_weekday
+entities:
+  - date
+slots:
+  date:
+    type: text
+    influence_conversation: false
+    mappings:
+      - type: from_entity
+        entity: date
+responses:
+  utter_greet:
+    - text: 你好，我是 Silly，我可以帮你查询时间、日期和星期幾。你可以对我说「现在幾點了？」、「今天幾號？」或者「明天星期幾？」。
+  utter_goodbye:
+    - text: 再见！
+actions:
+  - action_query_time
+  - action_query_date
+  - action_query_weekday
+  - utter_goodbye
+  - utter_greet
