--- a/data/datetime.yml
+++ b/data/datetime.yml
@@ -66,6 +66,10 @@ nlu:
       - 夏季
       - 秋季
       - 冬季
+      - 下周
+      - 下下周
+      - 上周
+      - 上上周
       - 這個月
       - 下個月
       - 下下個月
