--- a/data/keyword.yml
+++ b/data/keyword.yml
@@ -73,3 +73,7 @@ nlu:
       - Aimer
       - Post Malone
       - Justin Bieber
+      - Eric Nam
+      - Aimer
+      - Chance the Rapper
+      - Against the Current
